@@ -1,5 +1,6 @@
 python-django (1.1-2) UNRELEASED; urgency=low
 
+  * Run testsuite on build.
   * Use "--with quilt" over specifying $(QUILT_STAMPFN)/unpatch dependencies.
   * Override clean target correctly.
 
